@@ -10,62 +10,6 @@ base <- dirname(gsub("--file=", "", args[grepl("^--file=", args)]))[1]
 source(file.path(base, "command_mgr.R"), chdir = T)
 source(file.path(base, "docker_utils.R"))
 
-.build_prj_zip <- function(docker_image, platform, version, rver, dont_rm, pkgs, exc_master, dest_dir, sh) {
-  if (is.null(version) || is.na(version)) {
-    version <- NULL
-  }
-
-  if (!is.null(pkgs)) {
-    pkgs <- trimws(unlist(strsplit(pkgs, ",")))
-  }
-
-  prj <- RSuite::prj_init()
-  if (is.null(docker_image)) {
-    docker_image <- get_docker_image(prj, rver, platform) # from docker_utils.R
-  }
-
-  pack_fpath <- RSuite::prj_pack(prj = prj, path = tempdir(), pack_ver = version,
-                                 pkgs = pkgs, inc_master = !exc_master,
-                                 rver = rver)
-
-  cont_name <- run_container(docker_image) # from docker_utils.R
-  on.exit({
-    if (is.null(dont_rm) || !dont_rm) {
-      stop_container(cont_name) # from docker_utils.R
-    } else {
-      loginfo("Container %s not removed (--dont-rm passed).", cont_name)
-    }
-  }, add = T)
-
-  loginfo("Copying project pack into container %s ...", cont_name)
-  exec_docker_cmd(c("cp", pack_fpath, sprintf("%s:/opt/", cont_name)), # from docker_utils.R
-                  "Copying project pack into container")
-  loginfo("... done.")
-
-  prj_name <- prj$load_params()$get_safe_project_name()
-  run_incont_cmd(cont_name, sprintf("unzip %s", basename(pack_fpath))) # from docker_utils.R
-  if (!is.null(sh)) {
-    run_incont_cmd(cont_name, sh)
-  }
-  run_incont_cmd(cont_name, sprintf("cd %s && rsuite proj depsinst -v", prj_name)) # ...
-  run_incont_cmd(cont_name, sprintf("cd %s && rsuite proj build -v", prj_name)) # ...
-  cmd <- sprintf("cd %s && rsuite proj zip -v -p /opt", prj_name)
-  if (!is.null(version)) {
-    cmd <- paste0(cmd, " --version=", version)
-  }
-  run_incont_cmd(cont_name, cmd) # ...
-
-  zip_name <- gsub("^[^_]+_", "", basename(pack_fpath))
-  zip_fpath <- file.path(dest_dir, zip_name)
-
-  loginfo("Copying project deployment zip back from container %s ...", cont_name)
-  exec_docker_cmd(c("cp", sprintf("%s:/opt/%s", cont_name, zip_name), dest_dir), # from docker_utils.R
-                  "Copying project deployment zip back from container")
-  loginfo("... done.")
-
-  return(zip_fpath)
-}
-
 sub_commands <- list(
   zip = list(
     help = "Build project and generate deployment zip in docker container.",
@@ -103,10 +47,26 @@ sub_commands <- list(
         stop(sprintf("Destination folder does not exist: %s", opts$dest))
       }
 
-      .build_prj_zip(opts$image, opts$platform, opts$version, opts$rver,
-                     opts$dont_rm, opts$pkgs, opts$exc_master,
-                     opts$dest, opts$sh)
-      invisible()
+      rver <- if (is.null(opts$rver)) { RSuite::prj_init()$load_params()$r_ver } else { opts$rver }
+
+      cont_name <- sub_commands$run$run(opts = list(image = opts$image,
+                                                    platform = opts$platform,
+                                                    rver = rver,
+                                                    sh = opts$sh))
+      on.exit({
+        if (opts$dont_rm) {
+          loginfo("Container %s not removed (--dont-rm passed).", cont_name)
+        } else {
+          stop_container(cont_name) # from docker_utils.R
+        }
+      }, add = T)
+
+      zip_fpath <- sub_commands$build$run(opts = list(name = cont_name,
+                                                      version = opts$version,
+                                                      pkgs = opts$pkgs,
+                                                      exc_master = opts$exc_master,
+                                                      zip = opts$dest))
+      return(invisible(zip_fpath))
     }
   ),
   img = list(
@@ -189,8 +149,8 @@ sub_commands <- list(
 
 
       if (is.null(opts$from)) {
-        prj <- RSuite::prj_init()
-        opts$from <- get_docker_base_image(prj, opts$rver, opts$platform) # from docker_utils.R
+        opts$rver <- if (is.null(opts$rver)) { RSuite::prj_init()$load_params()$r_ver } else { opts$rver }
+        opts$from <- get_docker_base_image(opts$rver, opts$platform) # from docker_utils.R
         loginfo("Will use %s as base image!", opts$from)
       }
 
@@ -199,15 +159,15 @@ sub_commands <- list(
       on.exit({ unlink(tmp_dir, recursive = T, force = T) }, add = T)
 
       if (is.null(opts$zip)) {
-        opts$zip <- .build_prj_zip(image = opts$image,
-                                   platform = opts$platform,
-                                   version = opts$version,
-                                   rver = opts$rver,
-                                   dont_rm = NULL,
-                                   pkgs = opts$pkgs,
-                                   exc_master = opts$exc_master,
-                                   dest_dir = tmp_dir,
-                                   sh = opts$sh)
+        opts$zip <- sub_commands$zip$run(opts = list(image = opts$image,
+                                                     platform = opts$platform,
+                                                     version = opts$version,
+                                                     rver = opts$rver,
+                                                     dont_rm = FALSE,
+                                                     pkgs = opts$pkgs,
+                                                     exc_master = opts$exc_master,
+                                                     dest_dir = tmp_dir,
+                                                     sh = opts$sh))
       } else {
         if (!file.exists(opts$zip)) {
           stop("Project zip file passed does not exist: %s.", opts$zip)
@@ -255,6 +215,190 @@ sub_commands <- list(
                         "Tagging built image as latest")
         loginfo("... done.")
       }
+    }
+  ),
+  run = list(
+    help = "Run RSuite build container.",
+    options = list(
+      make_option(c("-i", "--image"), dest = "image", default = NULL,
+                  help="Image to use for building project. (default: %default)"),
+      make_option(c("-p", "--platform"), dest = "platform", default = "ubuntu",
+                  help=paste("Run container for building project on plaform passed.",
+                             "One of ubuntu, debian or centos. Used if image not specified.",
+                             "(default: %default)",
+                             sep = "\n\t\t")),
+      make_option(c("-r", "--rver"), dest = "rver", default="3.4",
+                  help=paste("Run container for building project on R version passed.",
+                             "Used if image not specified. (default: %default)",
+                             sep = "\n\t\t")),
+      make_option(c("-n", "--name"), dest = "name", default=NULL,
+                  help="If passed container will be started under specified name. (default: %default)"),
+      make_option(c("--sh"), dest = "sh",
+                  help="Extra command to execute on container.")
+    ),
+    run = function(opts) {
+      if (is.null(opts$image)) {
+        opts$image <- get_docker_rsuite_image(opts$rver, opts$platform) # from docker_utils.R
+      }
+      cont_name <- run_container(opts$image, opts$name) # from docker_utils.R
+      loginfo("RSuite build container %s started ...", cont_name)
+
+      if (!is.null(opts$sh)) {
+        tryCatch({
+          run_incont_cmd(cont_name, opts$sh)
+        }, error = function(e) {
+          stop_container(cont_name) # from docker_utils.R
+          stop(geterrmessage())
+        })
+      }
+
+      return(invisible(cont_name))
+    }
+  ),
+  list = list(
+    help = "List RSuite build containers.",
+    options = list(),
+    run = function(opts) {
+      output <- exec_docker_cmd(c("ps", "-f", "name=rsbuild-"), "Listing RSuite build containers") # from docker_utils.R
+      cat(output, sep = "\n")
+    }
+  ),
+  stop = list(
+    help = "Stop (and remove) RSuite build container(s).",
+    options = list(
+      make_option(c("-n", "--name"), dest = "name", default=NULL,
+                  help="Stop container under specified name. (default: %default)"),
+      make_option(c("-a", "--all"), dest = "all", action="store_true", default=FALSE,
+                  help="If passed will stop all RSuite build containers.")
+    ),
+    run = function(opts) {
+      if (opts$all) {
+        if (!is.null(opts$name)) {
+          stop("-a (--all) and -n (--name) are exclusive.")
+        }
+      } else {
+        if (is.null(opts$name)) {
+          stop("Provide either -n (--name) or -a (--all).")
+        }
+      }
+
+      names <- get_rsbuild_names(opts$name)
+      if (length(names) == 0) {
+        loginfo("No containers found.")
+        return(invisible())
+      }
+
+      exec_docker_cmd(c("rm", "-f", names), sprintf("Stoping %s containers", length(names)))
+      loginfo("Container(s) stopped: %s", paste(names, collapse = " "))
+    }
+  ),
+  build = list(
+    help = "Build project in RSuite build container",
+    options = list(
+      make_option(c("-n", "--name"), dest = "name",
+                  help="Name of RSuite build container to build project in. (required)"),
+      make_option(c("--version"), dest = "version",
+                  help=paste("Version to use for project pack tagging.",
+                             "(default: use ZipVersion form PARAMETERS and revision from RC)",
+                             sep = "\n\t\t")),
+      make_option(c("--packages"), dest = "pkgs",
+                  help=paste("Comma separated list of project packages to include into project pack.",
+                             "If not passed all project packages will be included.",
+                             sep = "\n\t\t")),
+      make_option(c("--exc-master"), dest = "exc_master", action="store_true", default=FALSE,
+                  help="If passed will exclude master scripts from project pack created. (default: %default)"),
+
+      make_option(c("-z", "--zip"), dest = "zip", default=NULL,
+                  help=paste("Accepts folder as argument. If passed after building will create deployment zip.",
+                             "Created zip will be retrieved from the container. (default: %default)",
+                             sep = "\n\t\t"))
+    ),
+    run = function(opts) {
+      if (is.null(opts$name)) {
+        stop("Provide name of container to build project in with -n (--name) option")
+      }
+      if (!is.null(opts$zip) && !dir.exists(opts$zip)) {
+        stop("Destination folder for zip does not exist.")
+      }
+
+      cont_name <- get_rsbuild_names(opts$name) # from docker_utils.R
+      stopifnot(length(cont_name) == 1)
+
+      prj <- RSuite::prj_init()
+      pkgs <- if (!is.null(opts$packages)) { trimws(unlist(strsplit(opts$packages, ","))) }
+
+      rver_str <- exec_docker_cmd(c("exec", cont_name, "Rscript", "--version"), # from docker_utils.R
+                                  "Detecting R version on the container")
+      rver <- gsub("^.+version (\\d+[.]\\d+).+$", "\\1", rver_str)
+
+      pack_fpath <- RSuite::prj_pack(prj = prj, path = tempdir(), pack_ver = opts$version,
+                                     pkgs = pkgs, inc_master = !opts$exc_master,
+                                     rver = rver)
+
+      loginfo("Copying project pack into container %s ...", cont_name)
+      exec_docker_cmd(c("cp", pack_fpath, sprintf("%s:/opt/", cont_name)), # from docker_utils.R
+                      "Copying project pack into container")
+      loginfo("... done.")
+
+      prj_name <- prj$load_params()$get_safe_project_name()
+
+      clear_code <- paste(sprintf("if (dir.exists('/opt/%s')) {", prj_name),
+                          sprintf("  to_rem = list.files('/opt/%s', all.file = TRUE, include.dirs = TRUE);", prj_name),
+                          sprintf("  to_rem = to_rem[!(to_rem %%in%% c('deployment', '.', '..'))];"),
+                          sprintf("  unlink(file.path('/opt/%s', to_rem), recursive = TRUE, force = TRUE);", prj_name),
+                          sprintf("}"))
+      exec_docker_cmd(c("exec", cont_name, "Rscript", "-e", paste0('"', clear_code, '"')),  # from docker_utils.R
+                      "Cleaning old package build")
+
+      run_incont_cmd(cont_name, sprintf("unzip %s", basename(pack_fpath))) # from docker_utils.R
+      run_incont_cmd(cont_name, sprintf("cd %s && rsuite proj depsinst -v", prj_name)) # ...
+      run_incont_cmd(cont_name, sprintf("cd %s && rsuite proj depsclean -v", prj_name)) # ...
+
+      if (is.null(opts$zip)) {
+        run_incont_cmd(cont_name, sprintf("cd %s && rsuite proj build -v", prj_name)) # ...
+        loginfo("Project %s is built in %s container.", prj_name, cont_name)
+
+        return(invisible(NULL))
+      }
+
+      cmd <- sprintf("cd %s && rsuite proj zip -v -p /opt", prj_name)
+      if (!is.null(opts$version)) {
+        cmd <- paste0(cmd, " --version=", opts$version)
+      }
+      run_incont_cmd(cont_name, cmd) # ...
+
+      zip_name <- gsub("^[^_]+_", "", basename(pack_fpath))
+      zip_fpath <- file.path(opts$zip, zip_name)
+
+      loginfo("Copying project deployment zip back from container %s ...", cont_name)
+      exec_docker_cmd(c("cp", sprintf("%s:/opt/%s", cont_name, zip_name), opts$zip), # ...
+                      "Copying project deployment zip back from container")
+      loginfo("... done.")
+
+      return(invisible(zip_fpath))
+    }
+  ),
+  exec = list(
+    help = "Execute command in RSuite build container in non interactive way.",
+    options = list(
+      make_option(c("-n", "--name"), dest = "name",
+                  help="Name of RSuite build container to build project in. (required)"),
+      make_option(c("-c", "--cmd"), dest = "cmd",
+                  help="Command to execute in the container. (required)")
+    ),
+    run = function(opts) {
+      if (is.null(opts$name)) {
+        stop("Provide name of container to build project in with -n (--name) option")
+      }
+      if (is.null(opts$cmd)) {
+        stop("Provide command to run in container -c (--cmd) option")
+      }
+
+      cont_name <- get_rsbuild_names(opts$name) # from docker_utils.R
+      stopifnot(length(cont_name) == 1)
+
+      cat(exec_docker_cmd(c("exec", cont_name, opts$cmd), "Running command in container"),
+          sep = "\n")
     }
   )
 )
